fix(style): augmente le contraste de l'heure de fin des ateliers

--- a/2013-automne/party.css
+++ b/2013-automne/party.css
@@ -97,10 +97,10 @@
   font-weight: bold;
 }
 #party #programme .datetime .dt-end {
-  color: #ccc;
+  color: #aaa;
 }
 #party #programme .datetime span {
-  color: #ccc;
+  color: #aaa;
   display: block;
   text-align: center;
 }
